--- a/style.css
+++ b/style.css
@@ -13,24 +13,17 @@ header {
   margin: 16px 0;
 }
 h1 {
-  margin-top: 20px;
+  margin-top: 60px;
+  margin-bottom: 30px;
   text-align: center;
-}
-header h1 {
-  text-transform: uppercase;
-  font-weight: 300;
-  margin: 40px auto;
-}
-
-header vaadin-combo-box {
-  margin-left: 90px;
-  min-width: 300px;
 }
 
 main {
   display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
+  margin: auto;
+  width: 80%;
+  grid-gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-auto-rows: max-content;
   grid-auto-flow: row dense;
 }
